# volare

./: .flake8  .gitattributes  .gitignore  .mypy.ini  MANIFEST.in  Makefile  OSAcknowledgements  Readme.md  default.nix  flake.nix  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_lint.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: generate_tag.py  gh.py
.github/workflows/: ci.yml  release.yml
nix/: gitignore.nix
type_stubs/: click_default_group.pyi  pcpp.pyi  truststore.pyi
volare/: __init__.py  __main__.py  __version__.py  build.py  click_common.py  click_option.py  common.py  families.py  git_multi_clone.py  github.py  manage.py
