[tool.poetry]
name = "volare"
version = "0.20.3"
description = "An PDK builder/version manager for PDKs in the open_pdks format"
authors = ["Efabless Corporation and Contributors <donn@efabless.com>"]
readme = "Readme.md"
license = "Apache-2.0"
homepage = "https://efabless.com"
repository = "https://github.com/efabless/volare"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

[tool.poetry.dependencies]
python = ">=3.8"
click = ">=8,<9"
pyyaml = ">=5,<7"
rich = ">=12,<14"
httpx = ">=0.22.0,<0.29"
pcpp = ">=1.2,<2"
zstandard = ">=0.19.0,<1"


[tool.poetry.dev-dependencies]
wheel = "*"
black = ">=24.4.0,<25"
flake8 = ">=4"
mypy = ">=1.9.0,<1.10.0"
types-PyYAML = "*"
types-setuptools = "*"
types-attrs = "*"


[tool.poetry.scripts]
volare = "volare.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
